traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: value downto is not a member of Int
  for (i<- 6 downto 0){
             ^TraversalZigZag:19: error: value downto is not a member of Int
  for (i<- 6 downto 0){
             ^TraversalZigZag:25: error: value downto is not a member of Int
  for (i<- 6 downto 0){
             ^